# pyMBusMaster

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: run-test.yml
src/mbusmaster/: __init__.py  exceptions.py  transport.py
src/mbusmaster/protocol/: __init__.py  common.py  data.py  dib.py  dif.py  value.py  vif.py
tests/: conftest.py
tests/integration/: __init__.py  test_transport_recovery.py  test_transport_serial.py  test_transport_tcp.py  test_transport_timing.py
tests/unit/: test_data.py  test_dib.py  test_dif.py  test_transport.py  test_vif.py
